--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
